<resources>
    <string name="app_name">pda</string>
    <string name="Inbound">入库</string>
    <string name="Outbound">出库</string>
    <string name="Inventory">库内管理</string>
    <string name="My">我的</string>
    <string name="unloading_list_btn_synccon">Sync Con</string>
    <string name="activity_login_account">用户名</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_code">验证码</string>
    <string name="activity_login_submit">登录</string>
    <string name="activity_login_save_password">记住密码</string>
    <string name="activity_login_lost_password">忘记密码?</string>
    <string name="activity_unloading_detail_table_sku_id">SKU ID</string>
    <string name="activity_unloading_detail_table_loaded_qty">Loaded Qty</string>
</resources>