<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sobuy.pda.feature.login.ui.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF33583B"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp"
        tools:context=".feature.login.ui.activity.LoginActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="15.5dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="@dimen/d24"
                android:layout_height="@dimen/d24"
                android:src="@mipmap/en_zh" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/d25" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WCS Managment Syetem"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/d28" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/d22">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/activity_login_account"
                        android:padding="0dp"
                        android:singleLine="true"
                        android:text="@={viewModel.userName}"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/d22">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="password_toggle"
                    app:endIconDrawable="@drawable/custom_password_toggle"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/activity_login_password"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:singleLine="true"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--                <Space-->
                <!--                    android:layout_width="10dp"-->
                <!--                    android:layout_height="match_parent" />-->

                <!--                <ImageView-->
                <!--                    android:layout_width="@dimen/d24"-->
                <!--                    android:layout_height="@dimen/d24"-->
                <!--                    android:src="@mipmap/password_display" />-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="2"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/d22">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingEnd="12dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/activity_login_code"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:text="@={viewModel.code}"
                            android:textColor="@color/primary"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/verificationCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="TODO" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/SuperButton.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:outlineAmbientShadowColor="@color/white"
                android:text="@string/activity_login_submit" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/savePassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/circleView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/custom_single_choice"
                    android:contentDescription="@string/activity_login_save_password" />

                <Space
                    android:layout_width="6dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_login_save_password"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lostPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_lost_password"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
